tests/pos/todo/simple/top-00.ts

/*@ foo :: () => { top | true } */
function foo ():number {  
  return 1;
}

